--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PoQuizowane</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_quiz_select">QuizSelectActivity</string>
+    <string name="title_activity_quiz_summary">QuizSummaryActivity</string>
 </resources>
